Add word:"Huy"and some divs

--- a/ZohaSite/Shared/MainLayout.razor
+++ b/ZohaSite/Shared/MainLayout.razor
@@ -1,16 +1,19 @@
 ﻿@inherits LayoutComponentBase
 
 <PageTitle>ZohaSite</PageTitle>
+<link href="css/mainpage.css" rel="stylesheet" />
+<div>
+    @*<div class="sidebar">
+    <NavMenu />
+    </div>*@
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
-    <main>
-        <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+    <div class="header">
+        <div class="header_conteyner">
+            huy
         </div>
+
+    </div>
+    <main>
 
         <article class="content px-4">
             @Body
