--- a/ZohaSite/Pages/_Layout.cshtml
+++ b/ZohaSite/Pages/_Layout.cshtml
@@ -10,7 +10,10 @@
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
-     <link href="ZohaSite.styles.css" rel="stylesheet" />
+    <link href="css/product.css" rel="stylesheet" />
+    <link href="css/mainpage.css" rel="stylesheet" />
+    <link href="ZohaSite.styles.css" rel="stylesheet" />
+    <link rel="icon" href="imges/weed2.jpg" type="image/x-icon">
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
