--- a/ZohaSite/Shared/MainLayout.razor
+++ b/ZohaSite/Shared/MainLayout.razor
@@ -1,7 +1,8 @@
 ﻿@inherits LayoutComponentBase
 
-<PageTitle>ZohaSite</PageTitle>
-<link href="css/mainpage.css" rel="stylesheet" />
+<PageTitle>Fateev's Drugs'</PageTitle>
+
+
 <div>
     @*<div class="sidebar">
     <NavMenu />
@@ -11,21 +12,26 @@
             <h1 class="textlogomargin">Fateev's Drugs</h1>
         </div>
         <div class="header_conteyner">
-              <NavLink href="/Products">
-           <button class="btn btn-dark btnpading">All</button>
-              </NavLink>
-              <NavLink href="/LightDrugs">
-           <button class="btn btn-dark">Light Drugs</button>
-              </NavLink>
-              <NavLink href="/Pcihodel">
-           <button class="btn btn-dark">Psychotropics</button>
-              </NavLink>
-              <NavLink href="/Smoking">
-           <button class="btn btn-dark">Some Stuff For Smoking</button>
-              </NavLink>
-           <button class="btn btn-dark btnBasket">Basket</button>
+            <NavLink href="/Products">
+                <button class="btn btn-dark btnpading">All</button>
+            </NavLink>
+            <NavLink href="/LightDrugs">
+                <button class="btn btn-dark">Light Drugs</button>
+            </NavLink>
+            <NavLink href="/Pcihodel">
+                <button class="btn btn-dark">Psychotropics</button>
+            </NavLink>
+            <NavLink href="/Smoking">
+                <button class="btn btn-dark">Some Stuff For Smoking</button>
+            </NavLink>
+            <NavLink href="/Basket">
+                <button class="btn btn-dark btnBasket">Basket</button>
+            </NavLink>
+            <NavLink href="/Smoking">
+                <button class="btn btn-dark btnBasket">Admin</button>
+            </NavLink>
         </div>
-        
+
     </div>
     <main>
 
@@ -35,40 +41,17 @@
     </main>
 </div>
 
-@code{
-
-
-
-    public static List<Productc> productcs = new List<Productc>(){
-        new Productc(1,"Mashrum","50$","https://i.pinimg.com/236x/24/03/c1/2403c16257bfc1ee026a61409f9722e1.jpg"),
-        new Productc(1,"Mashrum","50$","https://i.pinimg.com/236x/24/03/c1/2403c16257bfc1ee026a61409f9722e1.jpg"),
-        new Productc(1,"Mashrum","50$","https://i.pinimg.com/236x/24/03/c1/2403c16257bfc1ee026a61409f9722e1.jpg"),
-        new Productc(1,"Mashrum","50$","https://i.pinimg.com/236x/24/03/c1/2403c16257bfc1ee026a61409f9722e1.jpg"),
-        new Productc(1,"Mashrum","50$","https://i.pinimg.com/236x/24/03/c1/2403c16257bfc1ee026a61409f9722e1.jpg"),
-        new Productc(1,"Mashrum","50$","https://i.pinimg.com/236x/24/03/c1/2403c16257bfc1ee026a61409f9722e1.jpg"),
-        new Productc(1,"Mashrum","50$","https://i.pinimg.com/236x/24/03/c1/2403c16257bfc1ee026a61409f9722e1.jpg"),
-        new Productc(1,"Mashrum","50$","https://i.pinimg.com/236x/24/03/c1/2403c16257bfc1ee026a61409f9722e1.jpg"), 
-        new Productc(2,"Bong","100$","https://www.p4headshop.com.ua/image/cache/catalog/1tovarbong/Diffuse%20Coil/1-700x700.jpg"),
-        new Productc(2,"Bong","100$","https://www.p4headshop.com.ua/image/cache/catalog/1tovarbong/Diffuse%20Coil/1-700x700.jpg"),
-        new Productc(2,"Bong","100$","https://www.p4headshop.com.ua/image/cache/catalog/1tovarbong/Diffuse%20Coil/1-700x700.jpg"),
-        new Productc(2,"Bong","100$","https://www.p4headshop.com.ua/image/cache/catalog/1tovarbong/Diffuse%20Coil/1-700x700.jpg"),
-        new Productc(2,"Bong","100$","https://www.p4headshop.com.ua/image/cache/catalog/1tovarbong/Diffuse%20Coil/1-700x700.jpg"),
-        new Productc(2,"Bong","100$","https://www.p4headshop.com.ua/image/cache/catalog/1tovarbong/Diffuse%20Coil/1-700x700.jpg"),
-        new Productc(2,"Bong","100$","https://www.p4headshop.com.ua/image/cache/catalog/1tovarbong/Diffuse%20Coil/1-700x700.jpg"),
-        new Productc(3,"Weed","20$","https://play-lh.googleusercontent.com/jkU2nz-D5vlKyS2Q_GPSW8bFMZ_6Q4HFkaOQnnQST2oH028tqmOBW8CyuszqU1zF5vhq"),
-        new Productc(3,"Weed","20$","https://thefader-res.cloudinary.com/private_images/w_1440,c_limit,f_auto,q_auto:best/WEED-WEBSITE-MAIN_vrocly/best-weed-smoking-tips.jpg"),
-        new Productc(3,"Weed","20$","https://play-lh.googleusercontent.com/jkU2nz-D5vlKyS2Q_GPSW8bFMZ_6Q4HFkaOQnnQST2oH028tqmOBW8CyuszqU1zF5vhq"),
-        new Productc(3,"Weed","20$","https://thefader-res.cloudinary.com/private_images/w_1440,c_limit,f_auto,q_auto:best/WEED-WEBSITE-MAIN_vrocly/best-weed-smoking-tips.jpg"),
-        new Productc(3,"Weed","20$","https://play-lh.googleusercontent.com/jkU2nz-D5vlKyS2Q_GPSW8bFMZ_6Q4HFkaOQnnQST2oH028tqmOBW8CyuszqU1zF5vhq"),
-        new Productc(3,"Weed","20$","https://thefader-res.cloudinary.com/private_images/w_1440,c_limit,f_auto,q_auto:best/WEED-WEBSITE-MAIN_vrocly/best-weed-smoking-tips.jpg"),
-        new Productc(3,"Weed","20$","https://play-lh.googleusercontent.com/jkU2nz-D5vlKyS2Q_GPSW8bFMZ_6Q4HFkaOQnnQST2oH028tqmOBW8CyuszqU1zF5vhq"),
-        new Productc(3,"Weed","20$","https://thefader-res.cloudinary.com/private_images/w_1440,c_limit,f_auto,q_auto:best/WEED-WEBSITE-MAIN_vrocly/best-weed-smoking-tips.jpg"),
-        new Productc(3,"Weed","20$","https://play-lh.googleusercontent.com/jkU2nz-D5vlKyS2Q_GPSW8bFMZ_6Q4HFkaOQnnQST2oH028tqmOBW8CyuszqU1zF5vhq"),
-    };
-    
-
+@code {
 
 
 
 }
+
+
+
+
+
+
+
+
 
