Add some Classes foe DB and Registration Page

--- a/ZohaSite/Pages/_Layout.cshtml
+++ b/ZohaSite/Pages/_Layout.cshtml
@@ -12,6 +12,7 @@
     <link href="css/site.css" rel="stylesheet" />
     <link href="css/product.css" rel="stylesheet" />
     <link href="css/mainpage.css" rel="stylesheet" />
+    <link href="css/registration.css" rel="stylesheet" />
     <link href="ZohaSite.styles.css" rel="stylesheet" />
     <link rel="icon" href="imges/weed2.jpg" type="image/x-icon">
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
