--- a/ZohaSite/Shared/MainLayout.razor
+++ b/ZohaSite/Shared/MainLayout.razor
@@ -27,7 +27,7 @@
             <NavLink href="/Basket">
                 <button class="btn btn-dark btnBasket">Basket</button>
             </NavLink>
-            <NavLink href="/Smoking">
+            <NavLink href="/Registration">
                 <button class="btn btn-dark btnBasket">Admin</button>
             </NavLink>
         </div>
