Add Some methods for DB and Add registration Gage

--- a/ZohaSite/Pages/Reg2.razor
+++ b/ZohaSite/Pages/Reg2.razor
@@ -1,42 +1,34 @@
-﻿@page "/Registration"
-@inherits LayoutComponentBase
+﻿@page "/Registration2"
+@inject NavigationManager nav;
 
-   <div class="container">
-    <h1>Login</h1>
+
+<form action="action_page.php">
+  <div class="container">
+    <h1>Register</h1>
     <hr>
+
     <label for="email"><b>Login</b></label>
     <input @bind-value="login" type="text" placeholder="Enter Login" name="email" required>
 
     <label for="psw"><b>Password</b></label>
     <input @bind-value="password" type="password" placeholder="Enter Password" name="psw" required>
+
     <hr>
-    <button @onclick="IsAdmin" type="submit" class="btn btn-dark btnlogin">Login</button>
-    <NavLink href="/Registration2">
-    <button  type="submit" class="btn btn-dark btnlogin">Alredy Have An Accaunt?</button>
-    </NavLink>
+    <button type="submit" class="btn btn-dark btnlogin">Register</button>
   </div>
+</form>
 
- 
-
-
-@code {
-
+@code 
+{
     string login = string.Empty;
     string password = string.Empty;
 
 
-    public void IsAdmin()
+     private void Registration()
     {
-        
-
-
-
-
+        EtoBasa.AddUser(login, password,false);
+        nav.NavigateTo("/Registration/");
     }
-
-
-
-
 
 
 
