Alredy done Products from DB

--- a/ZohaSite/Pages/LightDrugs.razor
+++ b/ZohaSite/Pages/LightDrugs.razor
@@ -2,9 +2,9 @@
 
 
 <div class="mainscreen">
-    @foreach (var item in ProductList.productcs)
+    @foreach (var item in EtoBasa.productcs)
     {
-        if (item.Id == 3)
+        if (item.Category=="lightdrugs")
         {
             <div class="card">
                 <div class="picturBox">
