--- a/ZohaSite/Pages/Pcihodel.razor
+++ b/ZohaSite/Pages/Pcihodel.razor
@@ -2,9 +2,9 @@
 
 
 <div class="mainscreen">
-    @foreach (var item in ProductList.productcs)
+    @foreach (var item in EtoBasa.productcs)
     {
-        if (item.Id==1)
+        if (item.Category=="pcihodel")
         {
             <div class="card">
                 <div class="picturBox">
