--- a/ZohaSite/Pages/Products.razor
+++ b/ZohaSite/Pages/Products.razor
@@ -3,7 +3,7 @@
 
 
 <div class="mainscreen">
-@foreach (var item in ProductList.productcs)
+@foreach (var item in EtoBasa.productcs)
 {
 
     <div class="card">
