--- a/ZohaSite/Pages/Products.razor
+++ b/ZohaSite/Pages/Products.razor
@@ -1,5 +1,6 @@
 ﻿
 @page "/Products"
+@inject Blazored.LocalStorage.ILocalStorageService session;
 
 
 <div class="mainscreen">
@@ -14,7 +15,7 @@
         <div class="btnNnfText">
             <h5 class="text">@item.Name</h5>
             <button class="btn btn-dark">Add To Basket</button>
-            <h5 class="btnNnfText">@item.Price</h5>
+            <h5 @onclick="((args)=>AddToBasket(item.Id))" class="btnNnfText">@item.Price</h5>
         </div>
 
     </div>
@@ -26,8 +27,16 @@
 
 @code{
 
+    int clientid;
+    string login = string.Empty;
     
-
+    public async void AddToBasket(int Id)
+    {
+        login = await session.GetItemAsync<string>("user");
+        clientid = EtoBasa.clients.Where(x => x.Login == login).FirstOrDefault().Id;
+        EtoBasa.AddCart(new ZohaSite.Cart {Name = EtoBasa.productcs[Id-1].Name, Price = EtoBasa.productcs[Id-1].Price, Img = EtoBasa.productcs[Id-1].Img,  ProductID = Id-1, UserID = clientid });
+        EtoBasa.InicializeLists();
+    }
 
 
 
