--- a/ZohaSite/Pages/Registration/LogIn.razor
+++ b/ZohaSite/Pages/Registration/LogIn.razor
@@ -1,5 +1,5 @@
 ﻿
-@page "/reg"
+@page "/Login"
 @inherits LayoutComponentBase
 @inject NavigationManager nav;
 @inject Blazored.LocalStorage.ILocalStorageService session;
