--- a/ZohaSite/Pages/Registration/Registration.razor
+++ b/ZohaSite/Pages/Registration/Registration.razor
@@ -2,10 +2,6 @@
 @inject NavigationManager nav;
 @using ZohaSite;
 
-
-
-
-
 <form action="action_page.php">
     <div class="container">
         <h1>Register</h1>
@@ -27,9 +23,19 @@
 
     public void Regist()
     {
+        if (ClientValidation.SimpleValid(login) == true && ClientValidation.SimpleValid(password) == true)
+        {
+            EtoBasa.AddUser(login, Password.MakeHash(password), true);
+            nav.NavigateTo("/Login/");
+        }
+        else
+        {
+            
+            nav.NavigateTo("/registration2/");
 
-        EtoBasa.AddUser(login,Password.MakeHash(password), false);
-        nav.NavigateTo("/reg/");
+        }
+
+
 
 
 
