--- a/ZohaSite/Shared/MainLayout.razor
+++ b/ZohaSite/Shared/MainLayout.razor
@@ -28,7 +28,7 @@
                 <button class="btn btn-dark btnBasket">Basket</button>
             </NavLink>
             <NavLink href="/Login">
-                <button class="btn btn-dark btnBasket">Admin</button>
+                <button class="btn btn-dark btnBasket">Login</button>
             </NavLink>
         </div>
 
