--- a/ZohaSite/Pages/Product/All.razor
+++ b/ZohaSite/Pages/Product/All.razor
@@ -14,8 +14,8 @@
         </div>
         <div class="btnNnfText">
             <h5 class="text">@item.Name</h5>
-            <button class="btn btn-dark">Add To Basket</button>
-            <h5 @onclick="((args)=>AddToCart(item.Id))" class="btnNnfText">@item.Price</h5>
+            <button  @onclick="((args)=>AddToCart(item.Id))" class="btn btn-dark">Add To Basket</button>
+            <h5 class="btnNnfText">@item.Price</h5>
         </div>
 
     </div>
@@ -29,19 +29,20 @@
 
     int clientid;
     string login = string.Empty;
-    public async void AddToCart(int ID)
+
+    protected async override void OnInitialized()
     {
         login = await session.GetItemAsync<string>("client");
-        foreach (var item in EtoBasa.clients)
-        {
-            if (item.Login==login)
-            {
-                clientid = item.Id;
-            }
-        }
-        EtoBasa.AddCart(new ZohaSite.Cart {Name = EtoBasa.productcs[ID-1].Name, Price = EtoBasa.productcs[ID-1].Price, Img = EtoBasa.productcs[ID-1].Img,  ProductID = ID-1, UserID = clientid });
+        clientid = EtoBasa.clients.Where(x => x.Login == login).FirstOrDefault().Id;
+    }
+
+    public void AddToCart(int ID)
+    {
+        EtoBasa.AddCart(new Cart {Name = EtoBasa.productcs[ID].Name, Price = EtoBasa.productcs[ID].Price, Img = EtoBasa.productcs[ID].Img,UserID = clientid,  ProductID = ID  });
         EtoBasa.InicializeLists();
     }
+
+   
 
 
 
